@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-11T08:16:32Z",
-  "count_outdated" : 3035,
-  "uniques_outdated" : 1230,
+  "timestamp" : "2023-10-11T16:16:55Z",
+  "count_outdated" : 3037,
+  "uniques_outdated" : 1231,
   "count" : 3106,
   "uniques" : 1283,
   "clones" : [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 3,
