@@ -1,12 +1,7 @@
 {
-  "count": 70,
+  "count": 69,
   "uniques": 36,
   "clones": [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 3,
