@@ -1,3 +1,12 @@
+2023-10-11T16:16:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6485248901 # 1978
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
+* notice: last 14d: unq all: 36 69
+* notice: prev accum: outdated-unq outdated-all / unq all: 1230 3035 / 1283 3106
+* notice: next accum: outdated-unq outdated-all / unq all: 1231 3037 / 1283 3106
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-27] / []
+
 2023-10-11T08:16:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6479819730 # 1977
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
